src/webpage/style.css
body {
	height: 100vh;
	width: 100%;
	margin: 0;
	background: var(--secondary-bg);
	font-family: var(--font);
	color: var(--primary-text);
	overflow: hidden; /* avoid "bounce" */
	-webkit-text-size-adjust: 100%;
}
.dark-theme {
	background: #1b1b1b;
	color: #ffffff;
	#mainRow {
		background: #333333;
		img {
			background: #5a5a5a;
		}
	}
	#actionRow {
		background: #373737;
		color: white;
	}
	button {
		background: #101010;
		color: white;
	}
	.tabStyle {
		button {
			background: #0d0d0d;
		}
		.selected {
			box-shadow: none;
			background: #090909;
		}
		button:hover {
			background: #3d3d3d;
		}
	}
	.projectList {
		button:nth-of-type(even) {
			background-color: rgb(46 46 46);
		}
	}
	.fileList {
		span {
			background: #0a0a0a;
		}
	}
	.regiTable {
		tr:first-child {
			background: #000000;
			text-align: center;
		}
	}
	tr:nth-of-type(even) {
		background-color: rgb(45 45 45);
	}
	tr:first-child {
		background: #000000;
	}
	.controls {
		background: #080808;
	}
	.LastUsed {
		background-color: #5b6529 !important;
	}
	.running {
		background-color: #5b6529;
	}
	tr:nth-of-type(even).running {
		background-color: #5b6529;
	}
	dialog {
		background: #1a1a1a;
	}
	h1,
	h2,
	span {
		color: white;
	}
	.heightLimitTable {
		color: white;
		tr:first-child {
			background: #000000 !important;
		}
	}
}
.speedDiv {
	width: 200px;
}
#regiArea {
	flex-shrink: 0;
	flex-grow: 1;
	display: flex;
}
.projFiles {
	width: 2.2in;
	padding: 3px;
	/* box-shadow: inset 0 0 2px 1px; */
	flex-grow: 1;
	border: solid 1px black;
	box-sizing: border-box;

	h3 {
		margin-top: 3px;
		margin-bottom: 3px;
	}
}

.heightLimitTable {
	height: 60vh;
	width: 80vw;
	overflow: auto;
	tr:first-child {
		position: relative !important;
		background: white !important;
	}
	td {
		white-space: pre;
	}
}

dialog {
	border: black solid 2px;
	border-radius: 6px;
	background: #f6f6f6;
}
.fileList {
	padding: 2px;
	border: solid black 1px;
	height: 100%;

	span {
		cursor: pointer;
		background: #e0e0e0;
		padding: 2px;
		margin: 2px 0px;
	}
}
.regiTable {
	tr {
		font-size: 10px;
		padding: 0;
		font-family: monospace;
	}
	tr:first-child {
		background: #b5b5b5;
		text-align: center;
	}
	td {
		width: 0.7in;
	}
}
.projectList {
	width: 2.5in;
	max-height: 2.5in;
	overflow-y: auto;
	button {
		width: 2.5in !important;
		margin: 0 !important;
		border: none;
		border-top: solid black 1px;
	}
	button:nth-of-type(even) {
		background-color: rgb(218 218 218);
	}
	border: solid black 1px;
	border-top: none;
}
.scrollTable {
	overflow-y: scroll;
	flex-shrink: 1;
	min-height: 0;
	border: 2px solid rgb(140 140 140);
	table {
		table-layout: fixed;
	}
}
table {
	font-size: 10px;
	font-family: monospace;
	border-collapse: collapse;
	width: 100%;
	overflow-y: scroll;
	flex-grow: 0;
	flex-shrink: 1;
}

tr {
	width: 100%;
}
td {
	border: solid black 1px;
}
tr:first-child {
	background: #b5b5b5;
	border-collapse: separate;
	position: sticky;
	top: 0;
}
.LastUsed {
	background-color: #d2e08b !important;
}
.running {
	background-color: #d2e08b;
}
tr:nth-of-type(even).running {
	background-color: #ced6a6;
}
tr:nth-of-type(even) {
	background-color: rgb(218 218 218);
}
#mainRow {
	background: #e9e9e9;
	border-top: solid black 1px;
	img {
		width: 28px;
		padding: 3px;
		margin: 3px;
		background: #d3d3d3;
		border: solid black 1px;
		border-radius: 6px;
		cursor: pointer;
	}
	.disabled {
		background: #828282;
		opacity: 0.6;
		cursor: not-allowed;
	}
}
.tabStyle {
	/* padding-left: 4px; */
	box-shadow: inset #959595 0px -2px 2px;
	button {
		border: solid black 1px;
		transition: background 0.1s;
		border-radius: 8px 8px 0 0;
		border-bottom: 0;
		height: 24px;
		margin-left: 4px;
		background: #bfbfbf;
		box-shadow: inset #959595 0px -2px 2px;
	}
	.selected {
		box-shadow: none;
		background: buttonface;
	}
	button:hover {
		background: buttonface;
	}
}
#eeArea {
	width: 100%;
	display: flex;
	flex-direction: column;
	flex-shrink: 1;
}
#page {
	height: 100svh;
	background: var(--primary-bg);
}
.flexltr {
	min-height: 0;
	display: flex;
}
.editor {
	width: -webkit-fill-available;
	flex-grow: 1;
	min-height: 0px;

	canvas {
		flex-grow: 1;
		outline: none;
	}
}
.dontgrow {
	flex-shrink: 1;
	height: 1in;
	flex-grow: 1;
}
.flexttb {
	min-width: 0;
	display: flex;
	flex-direction: column;
}
.memView {
	flex-shrink: 1;
	min-height: 0;
}
.memView input {
	background: transparent;
	border: none;
	font-size: 10px;
	min-width: 100%;
	max-width: 100%;
}
.controls {
	flex-shrink: 0;
	display: flex;
	justify-content: center;
	gap: 4px;
	padding: 4px 0px;
	background: lightgray;
}
.start {
	display: flex;
	align-items: center;
	button {
		margin: 10px;
		width: 150px;
	}
}
.contextmenu {
	position: absolute;
	width: 2in;
	border: solid black 1px;
	border-bottom: 0;
}
.contextbutton {
	border-radius: 0;
	border-width: 0;
	border-bottom: 1px solid black;
	text-align: left;
	height: 0.24in;
	background: #e9e9e9;
	transition: background 0.1s;
	padding-left: 0.2in;
}
.contextbutton:hover {
	background: #bfbfbf;
}
#actionRow {
	background: #e9e9e9;
	flex-shrink: 0;

	button {
		transition: background 0.1s;
		background: transparent;
		border: 0;
		height: 0.22in;
	}
	button:hover {
		background: #bfbfbf;
	}
}
#mainArea {
	/* height: 100%; */
	flex-shrink: 1;
	flex-grow: 1;
	width: 100%;
}
#area {
	flex-grow: 1;
	flex-shrink: 1;
	min-height: 0px;
}
.consoleContainer {
	height: 120px;
	align-items: center;
	button {
		height: fit-content;
		width: 70px;
		margin: 5px;
		flex-shrink: 0;
		flex-grow: 0;
	}
	> pre {
		flex-grow: 1;
		height: 95%;
		border: solid black 1px;
		box-sizing: border-box;
		margin: 5px;
		overflow-y: scroll;
		scroll-margin: 20px;
		flex-direction: column-reverse;
		display: flex;
		span {
			height: 16px;
			flex-shrink: 0;
		}
	}
}

